--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7babacfc",
+   "id": "180a1c04",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aec1643d",
+   "id": "67c1e2f6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "547fddd0",
+   "id": "b0379a2c",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c72b1f",
+   "id": "44b59d0d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea7d139",
+   "id": "36e9a355",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eff0585c",
+   "id": "002f8124",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d061c5",
+   "id": "3462e4ca",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d52e3a5",
+   "id": "8fa0ec34",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca1acc9",
+   "id": "f32ee622",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e4d2fb",
+   "id": "9b2cbb7c",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd3edff3",
+   "id": "83c10c2c",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f8e5da",
+   "id": "b805b6cc",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e05e36a4",
+   "id": "16c68f69",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043f2e03",
+   "id": "f85d5d52",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b4b604",
+   "id": "6e5d5328",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718e3092",
+   "id": "b8eb52e7",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0d663c",
+   "id": "0962ccb3",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f97d33",
+   "id": "0bea2d0f",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1140db89",
+   "id": "4f2eb1aa",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7377bcb6",
+   "id": "6ceebc1f",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8ea158",
+   "id": "1675c1d3",
    "metadata": {
     "hide-output": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836484a5",
+   "id": "f053265f",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950dfb63",
+   "id": "f3b6141d",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95d191b2",
+   "id": "9ee1d278",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bdc1c8a",
+   "id": "7fca7e6a",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c19328e",
+   "id": "68b7e6e7",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e6df3c",
+   "id": "3a2603c2",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461999b2",
+   "id": "f3261529",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   }
  ],
  "metadata": {
-  "date": 1694314247.793032,
+  "date": 1694393438.3230207,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
